--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
         </li>
 
         <li>
-            <a style="border-bottom: 1px solid #e4e2e2;" class="no-child"> <i class="fa fa-th-list" ></i> All Categories</a>
+            <a href="#/login" style="border-bottom: 1px solid #e4e2e2;" class="no-child"> <i class="fa fa-th-list" ></i> All Categories</a>
              
 
         </li> 
@@ -682,6 +682,7 @@
     <!-- Load controllers -->
     <script src="app/controllers/indexController.js?v=2"></script>
     <script src="app/controllers/loginController.js?v=2"></script>
+      <script src="app/controllers/shopController.js?v=2"></script>
 
     <!-- Load custom filters -->
     <!-- Load custom directives -->
