--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html data-ng-app="ClearlyInventoryApp">
 <head>
     <meta name="keywords" content="angularjs,SPA,Single Page Application,refresh tokens,authentication,bearer token authentication,OWIN,bootstrap,bootstrap ui,tutorial,JS framework,ASP.NET WEB API 2,Taiseer Joudeh" />
-    <meta name="description" content="Welcome to Clearly Inventory, an easy online inventory management software for small business and organizations - web based, fast, sharable, and customizable." />
+    <meta name="description" content="Welcome to Nathdwara Mart" />
     <meta content="IE=edge, chrome=1" http-equiv="X-UA-Compatible" />
 
     <meta name="viewport" content="initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0, height=device-height" />
@@ -567,14 +567,12 @@
     </div>
 
 
-
-
-    <div id="toolbar">
+    <div class="yellow" id="toolbar">
         <div class="open-left" id="side-left">
             <i class="fa fa-navicon"></i>
         </div>
 
-        <span style="color: #333;" class="title">Nathdwara Mart</span>
+        <span style="color: #000;" class="title">NATHDWARA MART</span>
 
 
         <div class="dropdown open-right">
@@ -596,7 +594,7 @@
 
     <ul id="slide-out-left" class="side-nav animated bounceInLeft">
         <li>
-            <div style="background:#e8e825" class="sidenav-header">
+            <div class="yellow sidenav-header">
 
                 <div class="nav-avatar">
                     <img class="" src="img/logo.png" alt="">
@@ -679,6 +677,7 @@
     <script src="app/controllers/indexController.js?v=2"></script>
     <script src="app/controllers/loginController.js?v=2"></script>
       <script src="app/controllers/shopController.js?v=2"></script>
+      <script src="app/controllers/detailController.js?v=2"></script>
 
     <!-- Load custom filters -->
     <!-- Load custom directives -->
