--- a/index.html
+++ b/index.html
@@ -680,9 +680,10 @@
       <script src="app/controllers/detailController.js?v=2"></script>
        <script src="app/controllers/contactController.js?v=2"></script>
       <script src="app/controllers/aboutController.js?v=2"></script>
+        <script src="app/controllers/darshanController.js?v=2"></script>
 
     
-
+    
     <!-- Load custom filters -->
     <!-- Load custom directives -->
 
