--- a/index.html
+++ b/index.html
@@ -481,13 +481,19 @@
     margin: 0 auto;
     text-align: center;
     width: 54px;
-    padding: 10px;
-    background: #fff;
-    left: 43%;
+ 
+    left: 41%;
     border-radius: 100%;
 
    
         }
+
+
+
+            .mainloader img {
+                border-radius:100%;
+                border:1px solid #ccc;
+            }
 
     </style>
 
@@ -614,6 +620,10 @@
                <a href="#/bus"  style="border-bottom: 1px solid #e4e2e2;" class="no-child">  <i class="fa fa-circle-o" ></i> Bus</a>
              </li>
 
+            <li>
+               <a href="#/train"  style="border-bottom: 1px solid #e4e2e2;" class="no-child">  <i class="fa fa-circle-o" ></i> Train</a>
+             </li>
+
           <li>
                <a href="#/about"  style="border-bottom: 1px solid #e4e2e2;" class="no-child">  <i class="fa fa-user" ></i> About US</a>
              </li>
@@ -696,7 +706,7 @@
       <script src="app/controllers/aboutController.js?v=2"></script>
         <script src="app/controllers/darshanController.js?v=2"></script>
        <script src="app/controllers/busController.js?v=2"></script>
-    
+    <script src="app/controllers/trainController.js?v=2"></script>
     
     <!-- Load custom filters -->
     <!-- Load custom directives -->
