--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@
        <script src="app/controllers/contactController.js?v=2"></script>
       <script src="app/controllers/aboutController.js?v=2"></script>
         <script src="app/controllers/darshanController.js?v=2"></script>
-
+       <script src="app/controllers/busController.js?v=2"></script>
     
     
     <!-- Load custom filters -->
