--- a/index.html
+++ b/index.html
@@ -604,6 +604,18 @@
             </div>
         </li>
 
+          <li>
+               <a href="#/darshan"  style="border-bottom: 1px solid #e4e2e2;" class="no-child">  <i class="fa fa-circle-o" ></i> Darshan</a>
+             </li>
+
+          <li>
+               <a href="#/bus"  style="border-bottom: 1px solid #e4e2e2;" class="no-child">  <i class="fa fa-circle-o" ></i> Bus</a>
+             </li>
+
+          <li>
+               <a href="#/about"  style="border-bottom: 1px solid #e4e2e2;" class="no-child">  <i class="fa fa-user" ></i> About US</a>
+             </li>
+
         <li>
             <a href="#/login" style="border-bottom: 1px solid #e4e2e2;" class="no-child"> <i class="fa fa-th-list" ></i> All Categories</a>
              
