--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
-<html data-ng-app="ClearlyInventoryApp">
+<html data-ng-app="NathdwaraMartApp">
 <head>
-    <meta name="keywords" content="angularjs,SPA,Single Page Application,refresh tokens,authentication,bearer token authentication,OWIN,bootstrap,bootstrap ui,tutorial,JS framework,ASP.NET WEB API 2,Taiseer Joudeh" />
+    <meta name="keywords" content="Nathdwara,ShrinathJi ,Shrinathji Temple,Blog Post Nathdwara Mart,Nathdwara Temple,Nathdwara City,Home Nathdwara Mart,Index Nathdwara Mart,nathdwaramart" />
     <meta name="description" content="Welcome to Nathdwara Mart" />
     <meta content="IE=edge, chrome=1" http-equiv="X-UA-Compatible" />
 
