--- a/index.html
+++ b/index.html
@@ -631,9 +631,9 @@
                <a href="#/train"  style="border-bottom: 1px solid #e4e2e2;" class="no-child">  <i class="fa fa-circle-o" ></i> Train</a>
              </li>
 
-        <!--   <li>
-               <a href="#/around"  style="border-bottom: 1px solid #e4e2e2;" class="no-child">   <i class="fa fa-circle-o" ></i> Around Ratlam</a>
-             </li>-->
+          <li>
+               <a href="#/around"  style="border-bottom: 1px solid #e4e2e2;" class="no-child">   <i class="fa fa-circle-o" ></i> Help</a>
+             </li>
 
       
          <li> 
