--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
             <i class="fa fa-navicon"></i>
         </div>
 
-        <span style="color: #fff;" class="title">MY RATLAM</span>
+        <span style="color: #fff;" class="title">MY RATLAM <a href="demo.html">content</a> </span>
 
 
         <div class="dropdown open-right">
