--- a/index.html
+++ b/index.html
@@ -477,8 +477,8 @@
     </div>
     </div>
     
-     <script src="http://nm.myratlam.com/App/scripts/jquery-1.11.0.min.js"></script>
-    <script src="cordova.js"></script>
+     <script type="text/javascript" src="http://nm.myratlam.com/App/scripts/jquery-1.11.0.min.js"></script>
+   <script type="text/javascript" src="cordova.js"></script>
 
 
     <script>
